--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
                       <p><span class="title-s">Phone: </span> <span><a href="tel:+962776986630"
                             style="color: blue;">+962776986630</a></span>
                       </p>
+                      <a href="https://drive.google.com/file/d/1l6oYp5zERHpqlW6CCWBzRBziajoYrHWQ/view?usp=sharing">
+                        <button class="btn" style="background-color: DodgerBlue;
+                      border: none;
+                      color: white;
+                      padding: 12px 30px;
+                      cursor: pointer;
+                      font-size: 20px;"><i class="fa fa-download"></i> Download CV 📃</button>
+                      </a>
                     </div>
 
 
