--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Mohammad Al-shorman</h1>
+          <h1 class="intro-title mb-4">Mohammad Al-shorman</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Full stack developer, Web Developer,Web
               Designer,Frontend
               Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
