Update index add hover .html

--- a/index.html
+++ b/index.html
@@ -585,14 +585,10 @@
             </p>
             <br>
             <a href="Projects.html">
-              <span style="
-    padding-right: 20px;
-    padding-left: 20px;
-    color: #ffffff;
-    background-color: #0078ff;
-    display: inline-flex;
-    height: 24px;
-">learn more</span>
+              <span
+                style="opacity: 0.6; transition: 0.3s; border-radius: 50px; padding-right: 20px; padding-left: 20px; color: #ffffff; background-color: #0078ff; display: inline-flex; height: 27px;"
+                onmouseover="this.style.opacity='1'; this.style.backgroundColor='#0056b3';"
+                onmouseout="this.style.opacity='0.6'; this.style.backgroundColor='#0078ff';">learn more</span>
             </a>
             <br><br>
             <div class="line-mf"></div>
@@ -841,6 +837,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+
 
 </body>
 
