Update index  target="_blank".html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                       <p><span class="title-s">Phone: </span> <span><a href="tel:+962776986630"
                             style="color: blue;">+962776986630</a></span>
                       </p>
-                      <a href="https://drive.google.com/file/d/1l6oYp5zERHpqlW6CCWBzRBziajoYrHWQ/view?usp=sharing">
+                      <a href="https://drive.google.com/file/d/1l6oYp5zERHpqlW6CCWBzRBziajoYrHWQ/view?usp=sharing"  target="_blank">
                         <button class="btn" style="background-color: DodgerBlue;
                       border: none;
                       color: white;
