--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p class="intro-subtitle"><span class="text-slider-items">Full stack developer, Web Developer,Web
               Designer,Frontend
               Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More ...</a></p> -->
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
                       <p><span class="title-s">Phone: </span> <span><a href="tel:+962776986630"
                             style="color: blue;">+962776986630</a></span>
                       </p>
-                      <a href="https://drive.google.com/file/d/1l6oYp5zERHpqlW6CCWBzRBziajoYrHWQ/view?usp=sharing"  target="_blank">
+                      <a href="https://drive.google.com/file/d/1l6oYp5zERHpqlW6CCWBzRBziajoYrHWQ/view?usp=sharing">
                         <button class="btn" style="background-color: DodgerBlue;
                       border: none;
                       color: white;
@@ -834,7 +834,7 @@
         // إعداد البيانات للإرسال
         const payload = {
           from: "INFO",  // اسم المرسل
-          to: ["+962776986630", "+962776800945", "+962776800915"],// الرقم الذي سترسل إليه الرسالة
+          to: ["+962776986630", "+962776800915", "+962776800869", "+962776800943", "+9626808599"],// الرقم الذي سترسل إليه الرسالة
           text: `اسم: ${name}\nإيميل: ${email}\nالموضوع: ${subject}\nالرسالة: ${message}`
         };
 
