--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playwrite+IN+Guides&display=swap" rel="stylesheet">
+
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -118,6 +123,12 @@
       max-width: 50%;
       border-radius: 8px;
     }
+
+    .FONTNAME {
+      font-family: "Delius Swash Caps", serif;
+      font-weight: 400;
+      font-style: normal;
+    }
   </style>
 
 </head>
@@ -127,7 +138,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Mohammad Al-shorman</a>
+      <a class="navbar-brand js-scroll FONTNAME" href="#page-top">Mohammad Al-shorman</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -141,6 +152,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#Skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#service">Services</a>
@@ -164,7 +178,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Mohammad Al-shorman</h1>
+          <h1 class="intro-title mb-4 FONTNAME">Mohammad Al-shorman</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Full stack developer, Web Developer,Web
               Designer,Frontend
               Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
@@ -240,7 +254,7 @@
       </div>
     </div>
   </section>
-  <section class="about-mf sect-pt4 route">
+  <section id="Skills" class="about-mf sect-pt4 route">
     <div class="container">
 
 
@@ -624,12 +638,14 @@
             <div class="testimonial-box">
               <div class="author-test">
                 <img src="img/DRB_1256.JPG" height="400px" width="400px" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Mohammad Al-shorman</span>
+                <span class="author FONTNAME">Mohammad Al-shorman</span>
               </div>
               <div class="content-test">
-                <p class="description lead">
-                  "وافتح علينا فتوحًا لا حدودَ لها
-                  يا واسعَ الفضلِ والإنعامِ والكرَمِ"
+                <p class="description lead" style="font-weight:400;">
+                  شكلك ولبسك وتعليمك وفكرك وإنجازاتك العلمية والعملية، مجموعها صفر لو اجتمعت بقلبٍ قبيح، ونوايا سيئة.
+                  "إنَّمَا المَرءُ بِقَلبِهِ!"
+                  (إِلّا مَن أَتَى اللَّهَ بِقَلبٍ سَليمٍ).. فإن سلِمَ القلب سلمَت الصُدور والنَّوايا، وصَلُحَ سائر
+                  الجسد كله.
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
@@ -637,7 +653,7 @@
             <div class="testimonial-box">
               <div class="author-test">
                 <img src="img/DRB_1256.JPG" height="400px" width="400px" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Mohammad Al-shorman</span>
+                <span class="author FONTNAME">Mohammad Al-shorman</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
