--- a/index.html
+++ b/index.html
@@ -864,10 +864,9 @@
                       id="contactForm">
                       <input type="hidden" name="access_key" value="3501ed85-b391-48d3-bf74-a98f560d1f44">
 
-                      <div id="sendmessage" style="display: none;" class="alert alert-success"> Thank you!
-                        The form has
-                        been submitted successfully.
-                        We will reply to you soon!✅
+                      <div id="sendmessage" style="display: none;" class="alert alert-success">Thank you!🌷<br>The form
+                        has been submitted successfully.✅<br>
+                        We will reply to you soon!⏳
                       </div>
                       <div id="errormessage" style="display: none;" class="alert alert-danger">Failed to send the❌
                         message. Please try again!</div>
@@ -882,9 +881,13 @@
                             required />
                         </div>
                         <div class="col-md-12 mb-3">
+                          <input type="tel" name="phone" class="form-control" placeholder="Number Phone" required />
+                        </div>
+                        <div class="col-md-12 mb-3">
                           <input type="text" name="subject" class="form-control" id="subject" placeholder="Subject"
                             required minlength="4" />
                         </div>
+
                         <div class="col-md-12 mb-3">
                           <textarea name="message" class="form-control" rows="5" placeholder="Message"
                             required></textarea>
