Fix Google Search Console verification - corrected meta tag and file content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="location" content="إربد الأردن, Irbid Jordan">
     
     <!-- Google Site Verification -->
-  
+    <meta name="google-site-verification" content="google876b9330e2f08c93" />
     
     <!-- Open Graph Tags -->
     <meta property="og:title" content="محمد الشرمان - Mohammad Alshorman | Full Stack Web Developer">
