--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="glvuq_APk17ipqYfTsjfIWbPZSiPJc_1UZ_7O3MUsJs" />
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1S6WYT0T9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-S1S6WYT0T9');
+    </script>
+    
     <!-- Open Graph Tags -->
     <meta property="og:title" content="محمد الشرمان - Mohammad Alshorman | Full Stack Web Developer">
     <meta property="og:description" content="محمد الشرمان - Full Stack Web Developer specializing in Angular, .NET Core, and scalable web solutions. Based in Irbid, Jordan. مطور ويب متكامل من الأردن">
