إضافة مدونة تقنية شاملة مع تحسينات SEO متقدمة
✨ المميزات الجديدة:
- مدونة تقنية كاملة مع 4 مقالات متخصصة
- صفحة رئيسية للمدونة مع تصميم احترافي
- مقالات في ASP.NET Core و REST API و Clean Architecture و Angular
- نظام بحث وتصفية متقدم
- دعم اللغة العربية والإنجليزية

🔍 تحسينات SEO:
- Google Analytics (G-S1S6WYT0T9)
- Google Site Verification (glvuq_APk17ipqYfTsjfIWbPZSiPJc_1UZ_7O3MUsJs)
- meta tags شاملة مع Open Graph و Twitter Cards
- Schema.org structured data للمدونة والشخص والمنظمة
- sitemap.xml محدث مع جميع صفحات المدونة
- robots.txt محسن لمحركات البحث
- canonical URLs وDNS prefetch optimization
- geo-location tags لإربد، الأردن

📱 تجربة المستخدم:
- تصميم متجاوب بالكامل
- loading states وanimations سلسة
- dark/light theme toggle
- آمان وسرعة تحميل محسنة

🚀 الجاهزية للإنتاج:
- جميع الصفحات محسنة لمحركات البحث
- PWA configuration محدث
- 404 page مخصصة
- manifest.json معزز بمحتوى ثنائي اللغة

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#education" class="nav-link">Education</a></li>
-                <li><a href="/blog/simple-blog" class="nav-link">Blog</a></li>
+                <li><a href="/blog/simple-blog.html" class="nav-link">Blog</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             
